--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body, html{
 
 h1{
 	text-transform: uppercase;
+	font-size: 45px
 }
 h1 strong{
 	font-weight: 900;
@@ -20,7 +21,7 @@ h2{
 	margin:  0;
 }
 h3{
-font-size: 18px;
+font-size: 20px;
 font-weight: 900;
 }
 h4{
